--- a/Jed_Work/Test_Map/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/Jed_Work/Test_Map/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -143,7 +143,7 @@ OnlyBuildSelectedLevels=False
 OnlyBuildVisibility=False
 
 [ContentBrowser]
-ContentBrowserTab1.SelectedPaths=/Game/FirstPerson/table
+ContentBrowserTab1.SelectedPaths=/Game/Starwars
 AssetPropertyPicker.ThumbnailSizeScale=0.100000
 AssetPropertyPicker.CurrentViewType=0
 AssetDialog.ThumbnailSizeScale=0.100000
@@ -173,9 +173,15 @@ ContentBrowserTab1.CurrentViewType=1
 LastLevel=/Game/TestMap
 
 [AssetEditorSubsystem]
-CleanShutdown=True
+CleanShutdown=False
 
 [PlacementMode]
+RecentlyPlaced=/Game/Starwars/Door_Frame.Door_Frame;
+RecentlyPlaced=/Game/Starwars/Top_Kamino.Top_Kamino;
+RecentlyPlaced=/Game/Starwars/Supports_Kamino.Supports_Kamino;
+RecentlyPlaced=/Game/Starwars/Bottom_Kamino.Bottom_Kamino;
+RecentlyPlaced=/Game/Starwars/Floor_kamino.Floor_kamino;
+RecentlyPlaced=/Game/Starwars/CloneFactory_BaseV3_002.CloneFactory_BaseV3_002;
 RecentlyPlaced=/Script/Engine.BlockingVolume;/Engine/Transient.ActorFactoryBoxVolume_6
 RecentlyPlaced=/Game/FirstPerson/table/Table_feet.Table_feet;
 RecentlyPlaced=/Game/Textures/WeatheredWood2_Mat.WeatheredWood2_Mat;
@@ -190,12 +196,6 @@ RecentlyPlaced=/Game/FirstPerson/Stairs/trak2_pipe1b.trak2_pipe1b;
 RecentlyPlaced=/Game/FirstPerson/Stairs/trak2_pipe1b_Mat.trak2_pipe1b_Mat;
 RecentlyPlaced=/Game/FirstPerson/Stairs/Stair_01_T.Stair_01_T;
 RecentlyPlaced=/Game/FirstPerson/Stairs/Wood_Grain_01_C.Wood_Grain_01_C;
-RecentlyPlaced=/Game/Textures/totk_Mat.totk_Mat;
-RecentlyPlaced=/Script/Engine.PlayerStart;/Engine/Transient.ActorFactoryPlayerStart_0
-RecentlyPlaced=/Game/Starwars/CloneFactory_BaseV3_002.CloneFactory_BaseV3_002;
-RecentlyPlaced=/Game/FirstPerson/Stairs/Stair_01.Stair_01;
-RecentlyPlaced=/Game/Textures/Crate/Crate_01_uv_C_Mat.Crate_01_uv_C_Mat;
-RecentlyPlaced=/Game/Textures/Crate/Crate_01.Crate_01;
 
 [DetailCategories]
 StaticMeshActor.TransformCommon=True
@@ -547,26 +547,26 @@ bForceFrontXAxis=False
 bConvertSceneUnit=False
 
 [ContentBrowserRecent]
-MRUItem0=/Game/FirstPerson/table/Table
-MRUItem1=/Game/FirstPerson/Char/Chair
-MRUItem2=/Game/FirstPerson/table/Table_feet
-MRUItem3=/Game/FirstPerson/Char/Seat_supports
-MRUItem4=/Game/Textures/WeatheredWood2_S_Mat
-MRUItem5=/Game/FirstPerson/Stairs/Stair_01_T
-MRUItem6=/Game/Textures/Crate/Crate_01_uv_C_Mat
-MRUItem7=/Game/FirstPersonBP/Static_Mesh/Walls/WallWithdoor/Wall_withDoorFrame
-MRUItem8=/Game/Textures/metal_sheet_4_Mat
-MRUItem9=/Game/TestMap
-MRUItem10=/Game/Starwars/supports
-MRUItem11=/Game/Starwars/CloneFactory_BaseV3_002
-MRUItem12=/Game/FirstPerson/Stairs/trak2_pipe1b_Mat
-MRUItem13=/Game/FirstPerson/Stairs/Stair_01
-MRUItem14=/Game/FirstPerson/Stairs/Linear_Stair_Brush_StaticMesh
-MRUItem15=/Game/FirstPersonBP/Static_Mesh/Walls/Mainwall/Wall_Main
-MRUItem16=/Game/FirstPersonBP/Static_Mesh/Walls/WallWithWindow/Wall_withWindowFrame
-MRUItem17=/Game/Starwars/CloneFactory_Base
-MRUItem18=/Game/Starwars/Outside_wall
-MRUItem19=/Game/Textures/totk
+MRUItem0=/Game/TestMap
+MRUItem1=/Game/Starwars/Bottom_Kamino
+MRUItem2=/Game/Starwars/Door_Frame
+MRUItem3=/Game/Starwars/Floor_kamino
+MRUItem4=/Game/Starwars/Supports_Kamino
+MRUItem5=/Game/Starwars/Top_Kamino
+MRUItem6=/Game/Starwars/CloneFactory_BaseV3_002
+MRUItem7=/Game/FirstPerson/table/Table
+MRUItem8=/Game/FirstPerson/Char/Chair
+MRUItem9=/Game/FirstPerson/table/Table_feet
+MRUItem10=/Game/FirstPerson/Char/Seat_supports
+MRUItem11=/Game/Textures/WeatheredWood2_S_Mat
+MRUItem12=/Game/FirstPerson/Stairs/Stair_01_T
+MRUItem13=/Game/Textures/Crate/Crate_01_uv_C_Mat
+MRUItem14=/Game/FirstPersonBP/Static_Mesh/Walls/WallWithdoor/Wall_withDoorFrame
+MRUItem15=/Game/Textures/metal_sheet_4_Mat
+MRUItem16=/Game/Starwars/supports
+MRUItem17=/Game/FirstPerson/Stairs/trak2_pipe1b_Mat
+MRUItem18=/Game/FirstPerson/Stairs/Stair_01
+MRUItem19=/Game/FirstPerson/Stairs/Linear_Stair_Brush_StaticMesh
 
 [AssetEditorToolkitTabLocation]
 /Game/FirstPersonBP/Static_Mesh/Walls/Wall_Main.Wall_Main=1
@@ -589,6 +589,12 @@ MRUItem19=/Game/Textures/totk
 /Game/Textures/WeatheredWood2_S_Mat.WeatheredWood2_S_Mat=1
 /Game/FirstPerson/Char/Chair.Chair=1
 /Game/FirstPerson/table/Table.Table=1
+/Game/Starwars/CloneFactory_BaseV3_002.CloneFactory_BaseV3_002=1
+/Game/Starwars/Top_Kamino.Top_Kamino=1
+/Game/Starwars/Supports_Kamino.Supports_Kamino=1
+/Game/Starwars/Floor_kamino.Floor_kamino=1
+/Game/Starwars/Door_Frame.Door_Frame=1
+/Game/Starwars/Bottom_Kamino.Bottom_Kamino=1
 
 [MaterialEditor]
 PrimType=1
@@ -667,11 +673,11 @@ FourPanes2x2.Viewport 1.bIsMaximized=True
 FourPanes2x2.Viewport 1.MaximizedViewport=FourPanes2x2.Viewport 1.Viewport1
 
 [Directories2]
-UNR=D:/Game_dev/Jed_Work/Test_Map/Content
+UNR=D:/Game_dev/Jed_Work/Test_Map/Content/FirstPersonBP/Maps
 BRUSH=D:/Jed_Work/Test_Map/Content/
 FBX=D:/Jed_Work/Test_Map/Content/
 FBXAnim=D:/Jed_Work/Test_Map/Content/
-GenericImport=D:/Game_dev/Jed_Work/Funiturrees/Table.obj
+GenericImport=D:/Game_dev/Jed_Work/Starwars_Modeling/Bottom_Kamino.obj
 GenericExport=D:/Jed_Work/Stairs/Linear_Stair_Brush_StaticMesh_01.OBJ
 GenericOpen=D:/Jed_Work/Test_Map/Content/
 GenericSave=D:/Jed_Work/Test_Map/Content/
