--- a/Jed_Work/Test_Map/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/Jed_Work/Test_Map/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -143,7 +143,7 @@ OnlyBuildSelectedLevels=False
 OnlyBuildVisibility=False
 
 [ContentBrowser]
-ContentBrowserTab1.SelectedPaths=/Game/Starwars
+ContentBrowserTab1.SelectedPaths=/Game
 AssetPropertyPicker.ThumbnailSizeScale=0.100000
 AssetPropertyPicker.CurrentViewType=0
 AssetDialog.ThumbnailSizeScale=0.100000
@@ -173,29 +173,29 @@ ContentBrowserTab1.CurrentViewType=1
 LastLevel=/Game/TestMap
 
 [AssetEditorSubsystem]
-CleanShutdown=False
+CleanShutdown=True
 
 [PlacementMode]
+RecentlyPlaced=/Game/FirstPerson/Stairs/Stair_01_T.Stair_01_T;
+RecentlyPlaced=/Game/Textures/industrial_textures/metal_stair_spec.metal_stair_spec;
+RecentlyPlaced=/Game/Textures/industrial_textures/metal_stair_Mat.metal_stair_Mat;
+RecentlyPlaced=/Game/FirstPerson/Stairs/Stair_Sides.Stair_Sides;
+RecentlyPlaced=/Game/Textures/zelda_Mat.zelda_Mat;
+RecentlyPlaced=/Game/Textures/Brick_02_Mat.Brick_02_Mat;
+RecentlyPlaced=/Game/Textures/metal_sheet_4_Mat.metal_sheet_4_Mat;
+RecentlyPlaced=/Game/Textures/Brick_03_Mat.Brick_03_Mat;
+RecentlyPlaced=/Game/Textures/Brick_04.Brick_04;
+RecentlyPlaced=/Game/Textures/Brick_04_Mat.Brick_04_Mat;
+RecentlyPlaced=/Game/Textures/WeatheredWood2_S.WeatheredWood2_S;
+RecentlyPlaced=/Game/Textures/Brick_03.Brick_03;
+RecentlyPlaced=/Game/Textures/Brick_01.Brick_01;
+RecentlyPlaced=/Game/Textures/Brick_02.Brick_02;
 RecentlyPlaced=/Game/Starwars/Door_Frame.Door_Frame;
 RecentlyPlaced=/Game/Starwars/Top_Kamino.Top_Kamino;
 RecentlyPlaced=/Game/Starwars/Supports_Kamino.Supports_Kamino;
 RecentlyPlaced=/Game/Starwars/Bottom_Kamino.Bottom_Kamino;
 RecentlyPlaced=/Game/Starwars/Floor_kamino.Floor_kamino;
 RecentlyPlaced=/Game/Starwars/CloneFactory_BaseV3_002.CloneFactory_BaseV3_002;
-RecentlyPlaced=/Script/Engine.BlockingVolume;/Engine/Transient.ActorFactoryBoxVolume_6
-RecentlyPlaced=/Game/FirstPerson/table/Table_feet.Table_feet;
-RecentlyPlaced=/Game/Textures/WeatheredWood2_Mat.WeatheredWood2_Mat;
-RecentlyPlaced=/Game/Textures/zelda_Mat.zelda_Mat;
-RecentlyPlaced=/Game/Textures/WeatheredWood2_S.WeatheredWood2_S;
-RecentlyPlaced=/Game/Textures/WeatheredWood2_S_Mat.WeatheredWood2_S_Mat;
-RecentlyPlaced=/Game/Textures/metal_sheet_4_Mat.metal_sheet_4_Mat;
-RecentlyPlaced=/Game/FirstPerson/table/Table.Table;
-RecentlyPlaced=/Game/FirstPerson/Char/Chair.Chair;
-RecentlyPlaced=/Game/FirstPerson/Stairs/Stair_01_T_Mat.Stair_01_T_Mat;
-RecentlyPlaced=/Game/FirstPerson/Stairs/trak2_pipe1b.trak2_pipe1b;
-RecentlyPlaced=/Game/FirstPerson/Stairs/trak2_pipe1b_Mat.trak2_pipe1b_Mat;
-RecentlyPlaced=/Game/FirstPerson/Stairs/Stair_01_T.Stair_01_T;
-RecentlyPlaced=/Game/FirstPerson/Stairs/Wood_Grain_01_C.Wood_Grain_01_C;
 
 [DetailCategories]
 StaticMeshActor.TransformCommon=True
@@ -673,7 +673,7 @@ FourPanes2x2.Viewport 1.bIsMaximized=True
 FourPanes2x2.Viewport 1.MaximizedViewport=FourPanes2x2.Viewport 1.Viewport1
 
 [Directories2]
-UNR=D:/Game_dev/Jed_Work/Test_Map/Content/FirstPersonBP/Maps
+UNR=D:/Game_dev/Jed_Work/Test_Map/Content
 BRUSH=D:/Jed_Work/Test_Map/Content/
 FBX=D:/Jed_Work/Test_Map/Content/
 FBXAnim=D:/Jed_Work/Test_Map/Content/
