--- a/Jed_Work/Test_Map/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/Jed_Work/Test_Map/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -129,8 +129,8 @@ CameraSpeed=6
 CurrentPosGridSize=4
 
 [MRU]
-MRUItem0=/Game/TestMap
-MRUItem1=/Game/FirstPersonBP/Maps/FirstPersonExampleMap
+MRUItem0=/Game/FirstPersonBP/Maps/FirstPersonExampleMap
+MRUItem1=/Game/TestMap
 MRUItem2=/Game/StarterContent/Maps/StarterMap
 
 [/Script/UnrealEd.MaterialEditorOptions]
@@ -143,7 +143,7 @@ OnlyBuildSelectedLevels=False
 OnlyBuildVisibility=False
 
 [ContentBrowser]
-ContentBrowserTab1.SelectedPaths=/Game
+ContentBrowserTab1.SelectedPaths=/Game/Starwars
 AssetPropertyPicker.ThumbnailSizeScale=0.100000
 AssetPropertyPicker.CurrentViewType=0
 AssetDialog.ThumbnailSizeScale=0.100000
@@ -170,7 +170,7 @@ ContentBrowserTab1.ThumbnailSizeScale=0.180000
 ContentBrowserTab1.CurrentViewType=1
 
 [EditorStartup]
-LastLevel=/Game/TestMap
+LastLevel=/Game/FirstPersonBP/Maps/FirstPersonExampleMap
 
 [AssetEditorSubsystem]
 CleanShutdown=True
@@ -547,12 +547,12 @@ bForceFrontXAxis=False
 bConvertSceneUnit=False
 
 [ContentBrowserRecent]
-MRUItem0=/Game/TestMap
-MRUItem1=/Game/Starwars/Bottom_Kamino
-MRUItem2=/Game/Starwars/Door_Frame
-MRUItem3=/Game/Starwars/Floor_kamino
-MRUItem4=/Game/Starwars/Supports_Kamino
-MRUItem5=/Game/Starwars/Top_Kamino
+MRUItem0=/Game/Starwars/Top_Kamino
+MRUItem1=/Game/Starwars/Supports_Kamino
+MRUItem2=/Game/Starwars/Floor_kamino
+MRUItem3=/Game/Starwars/Door_Frame
+MRUItem4=/Game/Starwars/Bottom_Kamino
+MRUItem5=/Game/TestMap
 MRUItem6=/Game/Starwars/CloneFactory_BaseV3_002
 MRUItem7=/Game/FirstPerson/table/Table
 MRUItem8=/Game/FirstPerson/Char/Chair
