--- a/Jed_Work/Test_Map/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/Jed_Work/Test_Map/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -129,13 +129,14 @@ CameraSpeed=6
 CurrentPosGridSize=4
 
 [MRU]
-MRUItem0=/Game/FirstPersonBP/Maps/FirstPersonExampleMap
-MRUItem1=/Game/TestMap
+MRUItem0=/Game/TestMap
+MRUItem1=/Game/FirstPersonBP/Maps/FirstPersonExampleMap
 MRUItem2=/Game/StarterContent/Maps/StarterMap
 
 [/Script/UnrealEd.MaterialEditorOptions]
 bHideUnrelatedNodes=False
 bUseUnsortedMenus=False
+bShowGrid=False
 
 [LightingBuildOptions]
 OnlyBuildSelected=False
@@ -170,12 +171,15 @@ ContentBrowserTab1.ThumbnailSizeScale=0.180000
 ContentBrowserTab1.CurrentViewType=1
 
 [EditorStartup]
-LastLevel=/Game/FirstPersonBP/Maps/FirstPersonExampleMap
+LastLevel=/Game/TestMap
 
 [AssetEditorSubsystem]
-CleanShutdown=True
+CleanShutdown=False
+OpenAssetsAtExit=/Game/Textures/ChainGang/chain_10_Mat.chain_10_Mat
 
 [PlacementMode]
+RecentlyPlaced=/Game/Textures/ChainGang/chain_10_Mat.chain_10_Mat;
+RecentlyPlaced=/Engine/BasicShapes/Plane.Plane;/Engine/Transient.ActorFactoryBasicShape_0
 RecentlyPlaced=/Game/FirstPerson/Stairs/Stair_01_T.Stair_01_T;
 RecentlyPlaced=/Game/Textures/industrial_textures/metal_stair_spec.metal_stair_spec;
 RecentlyPlaced=/Game/Textures/industrial_textures/metal_stair_Mat.metal_stair_Mat;
@@ -194,8 +198,6 @@ RecentlyPlaced=/Game/Starwars/Door_Frame.Door_Frame;
 RecentlyPlaced=/Game/Starwars/Top_Kamino.Top_Kamino;
 RecentlyPlaced=/Game/Starwars/Supports_Kamino.Supports_Kamino;
 RecentlyPlaced=/Game/Starwars/Bottom_Kamino.Bottom_Kamino;
-RecentlyPlaced=/Game/Starwars/Floor_kamino.Floor_kamino;
-RecentlyPlaced=/Game/Starwars/CloneFactory_BaseV3_002.CloneFactory_BaseV3_002;
 
 [DetailCategories]
 StaticMeshActor.TransformCommon=True
@@ -423,6 +425,9 @@ StaticMeshComponent.VirtualTexture=True
 StaticMeshComponent.Tags=True
 StaticMeshComponent.Cooking=True
 MeshPaintModeSettings.Visualization=True
+MaterialExpressionAdd.MaterialExpressionAdd=True
+MaterialExpressionAdd.MaterialExpression=True
+MaterialExpressionAppendVector.MaterialExpression=True
 
 [MessageLog]
 LastLogListing=FBXImport
@@ -547,26 +552,26 @@ bForceFrontXAxis=False
 bConvertSceneUnit=False
 
 [ContentBrowserRecent]
-MRUItem0=/Game/Starwars/Top_Kamino
-MRUItem1=/Game/Starwars/Supports_Kamino
-MRUItem2=/Game/Starwars/Floor_kamino
-MRUItem3=/Game/Starwars/Door_Frame
-MRUItem4=/Game/Starwars/Bottom_Kamino
-MRUItem5=/Game/TestMap
-MRUItem6=/Game/Starwars/CloneFactory_BaseV3_002
-MRUItem7=/Game/FirstPerson/table/Table
-MRUItem8=/Game/FirstPerson/Char/Chair
-MRUItem9=/Game/FirstPerson/table/Table_feet
-MRUItem10=/Game/FirstPerson/Char/Seat_supports
-MRUItem11=/Game/Textures/WeatheredWood2_S_Mat
-MRUItem12=/Game/FirstPerson/Stairs/Stair_01_T
-MRUItem13=/Game/Textures/Crate/Crate_01_uv_C_Mat
-MRUItem14=/Game/FirstPersonBP/Static_Mesh/Walls/WallWithdoor/Wall_withDoorFrame
-MRUItem15=/Game/Textures/metal_sheet_4_Mat
-MRUItem16=/Game/Starwars/supports
-MRUItem17=/Game/FirstPerson/Stairs/trak2_pipe1b_Mat
-MRUItem18=/Game/FirstPerson/Stairs/Stair_01
-MRUItem19=/Game/FirstPerson/Stairs/Linear_Stair_Brush_StaticMesh
+MRUItem0=/Game/Textures/ChainGang/chain_10_Mat
+MRUItem1=/Game/TestMap
+MRUItem2=/Game/Starwars/Top_Kamino
+MRUItem3=/Game/Starwars/Supports_Kamino
+MRUItem4=/Game/Starwars/Floor_kamino
+MRUItem5=/Game/Starwars/Door_Frame
+MRUItem6=/Game/Starwars/Bottom_Kamino
+MRUItem7=/Game/Starwars/CloneFactory_BaseV3_002
+MRUItem8=/Game/FirstPerson/table/Table
+MRUItem9=/Game/FirstPerson/Char/Chair
+MRUItem10=/Game/FirstPerson/table/Table_feet
+MRUItem11=/Game/FirstPerson/Char/Seat_supports
+MRUItem12=/Game/Textures/WeatheredWood2_S_Mat
+MRUItem13=/Game/FirstPerson/Stairs/Stair_01_T
+MRUItem14=/Game/Textures/Crate/Crate_01_uv_C_Mat
+MRUItem15=/Game/FirstPersonBP/Static_Mesh/Walls/WallWithdoor/Wall_withDoorFrame
+MRUItem16=/Game/Textures/metal_sheet_4_Mat
+MRUItem17=/Game/Starwars/supports
+MRUItem18=/Game/FirstPerson/Stairs/trak2_pipe1b_Mat
+MRUItem19=/Game/FirstPerson/Stairs/Stair_01
 
 [AssetEditorToolkitTabLocation]
 /Game/FirstPersonBP/Static_Mesh/Walls/Wall_Main.Wall_Main=1
@@ -595,9 +600,10 @@ MRUItem19=/Game/FirstPerson/Stairs/Linear_Stair_Brush_StaticMesh
 /Game/Starwars/Floor_kamino.Floor_kamino=1
 /Game/Starwars/Door_Frame.Door_Frame=1
 /Game/Starwars/Bottom_Kamino.Bottom_Kamino=1
+/Game/Textures/ChainGang/chain_10_Mat.chain_10_Mat=1
 
 [MaterialEditor]
-PrimType=1
+PrimType=3
 
 [/Script/UnrealEd.MaterialStatsOptions]
 bPlatformUsed[0]=1
